--- a/Exercise.html
+++ b/Exercise.html
@@ -4,56 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link rel="stylesheet" href="../css/header.css">
-    <link rel="stylesheet" href="../css/footer.css">
-
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700;800&family=Quicksand:wght@500&display=swap"
-        rel="stylesheet">
-    <link rel="stylesheet" href="../css/Exercise.css">
+
+    <script src="./js/link_header_footer.js"></script> 
+    <link rel="stylesheet" href="./css/Exercise.css">
 </head>
 <body>
-    <header>
-        <img class="logo" src="/images/black_logo.png" alt="logo" width="100" height="100">
-        <div class="group">
-            <ul class="navigation">
-                <li><a href="#">Trang chủ</a></li>
-                <li><a href="#">Thú cưng</a></li>
-                <li><a href="#">Cửa hàng</a></li>
-                <li><a href="#">Dịch vụ</a><i class="fa-solid fa-chevron-down htmlcss-arrow arrow"
-                        id="service-icon"></i></i>
-                    <ul class="dropdown">
-                        <a href="../Vet/Vet.html"><li>Thú y</li></a>
-                        <a href="../Hotel/Hotel.html"><li>Khách sạn</li></a>
-                        <a href="../Exercise/Exercise.html"><li>Tập thể dục</li></a>
-                        <a href="../Grooming/Grooming.html"><li>Tắm gội - cắt tỉa lông</li></a>
-                    </ul>
-                </li>
-                <li><a href="#">Bài viết </a></li>
-                <li><a href="#">Liên hệ</a></li>
-
-            </ul>
-            <div class="search">
-                <span class="icon">
-                    <span class="searchBtn"><i class="fa-solid fa-magnifying-glass" id="searchBtn"></i></span>
-                    <span class="closeBtn"><i class="fa-solid fa-x" id="closeBtn"></i></span>
-                </span>
-            </div>
-            <span class="cartBtn">
-                <i class="fa fa-shopping-bag"></i>
-            </span>
-            <div class="searchBox">
-                <input type="text" placeholder="Bạn cần tìm gì nhỉ?">
-            </div>
-        </div>
-        <script src="../js/header.js"></script>
-    </header>
+    <div id="header"></div>
 
     <div class="container-body">
-        <div class="location">
+        <div class="bg_overlay"></div>
+        <div class="address">
             TRANG CHỦ > <b>DỊCH VỤ TẬP THỂ DỤC</b>
         </div>
 
@@ -80,7 +42,7 @@
         <img src="../assets/backgrounds/bg-exercise-process2.png" alt="bg-exercise-process2" class="bg infor_fr">
         <div class="infor">
             <div class="infor_content">
-                <h1>CHÚNG TÔI SẼ CÙNG BẠN CHĂM SÓC BÉ!</h1>
+                <h2>CHÚNG TÔI SẼ CÙNG BẠN CHĂM SÓC BÉ!</h2>
                 <p>
                     - Hầu hết các bé chó đều thích chạy khi có cơ hội <br>
                     - Nhiều em chó có mức năng lượng cao, sẽ rất hứng thú với việc thường xuyên được chạy <br>
@@ -99,7 +61,7 @@
         <!-- process -->
         <div class="process">
             <img src="../assets/images/Exercise/process_img1.png" alt="process_img1" class="process_img1">
-            <h1>QUY TRÌNH CHẠY BỘ TIÊU CHUẨN</h1>
+            <h2>QUY TRÌNH CHẠY BỘ TIÊU CHUẨN</h2>
             <div class="process_content">
                 <div class="process_title">
                     <div class="process_start">
@@ -193,6 +155,27 @@
                 </div>
             </div>
         </div>
+
+        <!-- partner -->
+        <div class="partner">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 73.5 70.7" style="enable-background:new 0 0 73.5 70.7;" xml:space="preserve"><g>	<path d="M14,37.3c3.2-5.9,13.6-10.5,22.7-0.4c9.1-10.1,19.5-5.5,22.7,0.4c9.3,17.2-22.5,31-22.7,31.1C36.5,68.3,4.7,54.5,14,37.3z"></path>	<path d="M60.5,32.2c-3.3-1.5-4.3-6.3-2.4-10.8c2-4.5,6.3-6.9,9.5-5.5s4.3,6.3,2.4,10.8c-1.6,3.6-4.7,5.9-7.5,5.9  C61.8,32.6,61.2,32.5,60.5,32.2L60.5,32.2z"></path>	<path d="M3.5,26.7c-2-4.5-0.9-9.3,2.4-10.8s7.6,1,9.5,5.5s0.9,9.3-2.4,10.8c-0.6,0.3-1.3,0.4-2,0.4C8.1,32.6,5.1,30.3,3.5,26.7z"></path>	<path d="M44.1,23.3c-4.2-1.1-6.3-6.7-4.8-12.4s6.2-9.4,10.4-8.3S56,9.3,54.5,15c-1.4,5-5.1,8.5-8.8,8.5  C45.1,23.5,44.6,23.4,44.1,23.3L44.1,23.3z"></path>	<path d="M19,15c-1.5-5.7,0.6-11.3,4.8-12.4s8.8,2.6,10.4,8.3s-0.6,11.3-4.8,12.4c-0.5,0.1-1,0.2-1.5,0.2C24.2,23.5,20.4,20,19,15  L19,15z"></path></g></svg>
+            <h1>Đối Tác</h1>
+            <div class="partner_wrapper">
+                <div class="partner_list">
+                    <img src="./assets/images/Home1/logo_partner1.png" alt="logo_partner1" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner2.png" alt="logo_partner2" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner3.png" alt="logo_partner3" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner4.png" alt="logo_partner4" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner5.png" alt="logo_partner5" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner6.png" alt="logo_partner6" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner7.png" alt="logo_partner7" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner8.png" alt="logo_partner8" class="logo_partner">
+                </div>
+            </div>
+        </div>
     </div>
+
+    <div id="footer"></div>
+
 </body>
 </html>
