--- a/Hotel.html
+++ b/Hotel.html
@@ -14,6 +14,7 @@
     <div id="header"></div>
 
     <div class="container-body">
+        <div class="bg_overlay"></div>
         <div class="address">
             TRANG CHỦ > <b>DỊCH VỤ KHÁCH SẠN</b>
         </div>
@@ -42,7 +43,7 @@
         <div class="special">
             <img src="../assets/images/Hotel/phone_img.png" alt="phone_img" class="phone_img">
             <div class="special_content">
-                <h1>DỊCH VỤ KHÁCH SẠN CÓ GÌ ĐẶC BIỆT</h1>
+                <h2>DỊCH VỤ KHÁCH SẠN CÓ GÌ ĐẶC BIỆT</h2>
                 <ul>
                     <li>Không gian lớn, đầy đủ tiện nghi, mở cửa 24/24</li>
                     <li>Bé có không gian riêng, chuồng được xây dựng đặc biệt và luôn khô ráo</li>
@@ -74,10 +75,9 @@
         <img src="../assets/backgrounds/bg-hotel-room.png" alt="bg-hotel-room" class="bg room_fr">
         <div class="room">
             <div class="room_option">
-                <div class="selected_option">
-                    <p>Phòng thường</p>
-                </div>
-                <p>Phòng VIP</p>
+                <div id="selected_option"></div>
+                <button class="room_toggle_btn" id="selecting" onclick="room_leftClick()">Phòng thường</button>
+                <button class="room_toggle_btn" onclick="room_rightClick()">Phòng VIP</button>
             </div>
             <div class="room_box">
                 <img src="../assets/images/Hotel/room_img.png" alt="room_img" class="room_img">
@@ -125,18 +125,35 @@
                     <li>Đồ ăn của các bé nhân viên sẽ cho ăn theo nhu cầu của khách (còn khách không có nhu cầu nhân viên sẽ tự cho ăn theo khẩu phần ở shop)</li>
                 </ul>
             </div>
-            <div class="rule_note">
-                <div class="rule_note_option">
-                    <p>LƯU Ý</p>
-                </div>
-                <p>QUY ĐỊNH</p>
+            <div class="rule_note_option">
+                <div id="rule_note_selected"></div>
+                <button class="rule_note_toggle_btn" id="rule_selecting" onclick="rule_leftClick()">LƯU Ý</button>
+                <button class="rule_note_toggle_btn" onclick="rule_rightClick()">QUY ĐỊNH</button>
             </div>
         </div>
 
         <!-- take care -->
         <img src="../assets/images/Hotel/takecare.png" alt="takecare" class="takecare">
+
+        <div class="partner">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 73.5 70.7" style="enable-background:new 0 0 73.5 70.7;" xml:space="preserve"><g>	<path d="M14,37.3c3.2-5.9,13.6-10.5,22.7-0.4c9.1-10.1,19.5-5.5,22.7,0.4c9.3,17.2-22.5,31-22.7,31.1C36.5,68.3,4.7,54.5,14,37.3z"></path>	<path d="M60.5,32.2c-3.3-1.5-4.3-6.3-2.4-10.8c2-4.5,6.3-6.9,9.5-5.5s4.3,6.3,2.4,10.8c-1.6,3.6-4.7,5.9-7.5,5.9  C61.8,32.6,61.2,32.5,60.5,32.2L60.5,32.2z"></path>	<path d="M3.5,26.7c-2-4.5-0.9-9.3,2.4-10.8s7.6,1,9.5,5.5s0.9,9.3-2.4,10.8c-0.6,0.3-1.3,0.4-2,0.4C8.1,32.6,5.1,30.3,3.5,26.7z"></path>	<path d="M44.1,23.3c-4.2-1.1-6.3-6.7-4.8-12.4s6.2-9.4,10.4-8.3S56,9.3,54.5,15c-1.4,5-5.1,8.5-8.8,8.5  C45.1,23.5,44.6,23.4,44.1,23.3L44.1,23.3z"></path>	<path d="M19,15c-1.5-5.7,0.6-11.3,4.8-12.4s8.8,2.6,10.4,8.3s-0.6,11.3-4.8,12.4c-0.5,0.1-1,0.2-1.5,0.2C24.2,23.5,20.4,20,19,15  L19,15z"></path></g></svg>
+            <h1>Đối Tác</h1>
+            <div class="partner_wrapper">
+                <div class="partner_list">
+                    <img src="./assets/images/Home1/logo_partner1.png" alt="logo_partner1" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner2.png" alt="logo_partner2" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner3.png" alt="logo_partner3" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner4.png" alt="logo_partner4" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner5.png" alt="logo_partner5" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner6.png" alt="logo_partner6" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner7.png" alt="logo_partner7" class="logo_partner">
+                    <img src="./assets/images/Home1/logo_partner8.png" alt="logo_partner8" class="logo_partner">
+                </div>
+            </div>
+        </div>
     </div>
 
     <div id="footer"></div>
+    <script src="./js/hotel.js"></script>
 </body>
 </html>
