header (cập nhập số sản phẩm trong giỏ hàng)

--- a/shop-category.html
+++ b/shop-category.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/pet-category.css">
+    <link rel="stylesheet" href="./css/shop-category.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 
@@ -18,7 +18,7 @@
     <section class="address">
         <a href="" class="address-link">Trang chủ</a>
         <span class="icon_more_than">></span>
-        <a href="./pets.html" class="address-link current-link">Thú cưng</a>
+        <a href="./shop-category.html" class="address-link current-link">Cửa hàng</a>
     </section>
 
     <!-- Content -->
@@ -118,6 +118,6 @@
     <!-- Footer -->
     <div id="footer"></div>
 
-    <script type="module" src="./js/pet-category.js"></script>
+    <script type="module" src="./js/shop-category.js"></script>
 </body>
 </html>
