--- a/header.html
+++ b/header.html
@@ -24,8 +24,8 @@
         <div class="group">
             <ul class="navigation">
                 <li><a href="/contact.html" class="menu-item">Trang chủ</a></li>
-                <li><a href="#" class="menu-item">Cửa hàng</a></li>
-                <li><a href="#" class="menu-item">Thú cưng</a></li>
+                <li><a href="./shop-category.html" class="menu-item">Cửa hàng</a></li>
+                <li><a href="./pet-category.html" class="menu-item">Thú cưng</a></li>
                 <li><a href="#" class="menu-item parent-item">Dịch vụ</a><i
                         class="fa-solid fa-chevron-down htmlcss-arrow arrow" id="service-icon"></i>
                     <ul class="dropdown">
@@ -53,9 +53,10 @@
                     <span class="closeBtn"><i class="fa-solid fa-x" id="closeBtn"></i></span>
                 </span>
             </div>
-            <span class="cartBtn">
+            <a href="./cart.html" class="cartBtn">
                 <i class="fa fa-shopping-bag"></i>
-            </span>
+                <span class="cart-number"></span>
+            </a>
         </div>
         <div class="searchBox">
             <input type="text" id="searchInput" placeholder="Bạn cần tìm gì nhỉ?">
