--- a/Grooming.html
+++ b/Grooming.html
@@ -17,7 +17,7 @@
     <div class="container-body">
         <div class="bg_overlay"></div>
         <div class="address">
-            TRANG CHỦ > <b>DỊCH VỤ TẮM GỘI - CẮT TỈA LÔNG</b>
+            <a href="./Home.html">TRANG CHỦ</a> > <a href="./Grooming.html"><b>DỊCH VỤ TẮM GỘI - CẮT TỈA LÔNG</b></a>
         </div>
 
         <!-- Intro -->
