--- a/Hotel.html
+++ b/Hotel.html
@@ -16,7 +16,7 @@
     <div class="container-body">
         <div class="bg_overlay"></div>
         <div class="address">
-            TRANG CHỦ > <b>DỊCH VỤ KHÁCH SẠN</b>
+            <a href="./Home.html">TRANG CHỦ</a> > <a href="./Hotel.html"><b>DỊCH VỤ KHÁCH SẠN</b></a>
         </div>
 
         <!-- Intro -->
