--- a/details.html
+++ b/details.html
@@ -28,35 +28,12 @@
         <!-- Product infromation  -->
         <div class="product-infomation">
             <!-- Image product infromation -->
-            <div class="image">
-                <!-- <div class="img-large"><img class="img" src="./images/pets/alaska.jpg" alt="alaska"></div>
-                <div class="img-small-group">
-                    <div class="img-small-row">
-                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
-                    </div>
-                    <div class="img-small-row">
-                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
-                    </div>
-                    <div class="img-small-row">
-                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
-                    </div>
-                    <div class="img-small-row">
-                        <img src="./images/pets/alaska.jpg" alt="alaska" class="img-small">
-                    </div>
-                </div> -->
-            </div>
+            <div class="image"></div>
             <!-- Infromation product -->
             <div class="infomation">
                 <h3 class="title">Alaska Malamute trắng xám</h3>
                 <div class="evaluate-info">
-                    <div class="star-evaluate">
-                        <!-- <p class="number-star">4.0</p>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-solid fa-star"></i>
-                        <i class="fa-regular fa-star"></i> -->
-                    </div>
+                    <div class="star-evaluate"></div>
                     <p>
                         <span>10</span> Đánh giá
                     </p>
@@ -67,11 +44,6 @@
                 <div class="price"><span></span><span>đ</span></div>
                 <div class="quantity">
                     <p class="quantity-text">Số lượng:</p>
-                    <!-- <div class="quantity-btn">
-                        <i class="fa-solid fa-minus"></i>
-                        <p class="quantity-num">1</p>
-                        <i class="fa-solid fa-plus"></i>
-                    </div> -->
                     <div class="quantity-btn">
                         <button type="button" class="cart-minus-btn" value="minus">
                             <i class="fa-solid fa-minus"></i>
