fix UI contact and header

--- a/header.html
+++ b/header.html
@@ -44,8 +44,8 @@
                         </a>
                     </ul>
                 </li>
-                <li><a href="#" class="menu-item">Bài viết</a></li>
-                <li><a href="#" class="menu-item">Liên hệ</a></li>
+                <li><a href="./blog.html" class="menu-item">Bài viết</a></li>
+                <li><a href="./contact.html" class="menu-item">Liên hệ</a></li>
             </ul>
             <div class="search">
                 <span class="icon-header">
