--- a/contact.html
+++ b/contact.html
@@ -21,14 +21,14 @@
     <div id="header"></div>
     <!-- Giới thiệu -->
     <div class="container">
-        <img src="" alt="background" class="container-background">
+        <div class="bg_overlay"></div>
         <div class="page-ruler">
             <p>TRANG CHỦ > BÀI VIẾT</p>
         </div>
         <div class="main-container">
             <div class="contact">
-                <img src="./assets/contact/shape.png" class="square" alt="" />
-                <img src="./assets/contact/cat-contact.png" alt="cat-contact">
+                <img src="./assets/images/contact/shape.png" class="square" alt="" />
+                <img src="./assets/images/contact/cat-contact.png" alt="cat-contact" class="form-img">
                 <div class="form-container">
                     <div class="form">
                         <div class="contact-info">
@@ -39,16 +39,16 @@
                             </p>
                             <div class="info">
                                 <div class="information">
-                                    <img src="./assets/contact/location.png" class="icon" alt="" />
+                                    <img src="./assets/images/contact/location.png" class="icon" alt="" />
                                     <p>100 Tạ Quang Bửu,
                                         Phường 5, Quận 8, TP. HCM</p>
                                 </div>
                                 <div class="information">
-                                    <img src="./assets/contact/email.png" class="icon" alt="" />
+                                    <img src="./assets/images/contact/email.png" class="icon" alt="" />
                                     <p>pettycare@gmail.com</p>
                                 </div>
                                 <div class="information">
-                                    <img src="./assets/contact/phone.png" class="icon" alt="" />
+                                    <img src="./assets/images/contact/phone.png" class="icon" alt="" />
                                     <p>0985261822</p>
                                 </div>
                             </div>
@@ -108,12 +108,49 @@
             <div class="contact-deals">
                 <h2 class="deal-content">Đồ chơi, Thức ăn </h2>
                 <h2 class="deal-sub-content">và Phụ kiện cho Thú cưng</h2>
-                <img src="./assets/contact/Pty-Dog-Food-2.webp" alt="" width="300" height="300" class="pet-food">
-                <img src="./assets/contact/Pty-Dog-Food-1.webp" alt="" width="120" height="100" class="pet-sub-food">
+                <img src="./assets/images/contact/Pty-Dog-Food-2.webp" alt="" width="320" height="350" class="pet-food">
+                <img src="./assets/images/contact/Pty-Dog-Food-1.webp" alt="" width="120" height="100"
+                    class="pet-sub-food">
                 <h2 class="deal-content-2">Ưu đãi cuối năm</h2>
                 <h3 class="deal-sub-content-2">Nhập ngay mã:</h3>
                 <h3 class="deal-code">ENDSALE</h3>
-                <img src="./assets/contact/Group 119.png" alt="" width="200" height="200" class="ad-deal">
+                <img src="./assets/images/contact/deals-image.png" alt="" width="300" height="300" class="ad-deal">
+            </div>
+            <!-- partner -->
+            <div class="partner">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px"
+                    viewBox="0 0 73.5 70.7" style="enable-background:new 0 0 73.5 70.7;" xml:space="preserve">
+                    <g>
+                        <path
+                            d="M14,37.3c3.2-5.9,13.6-10.5,22.7-0.4c9.1-10.1,19.5-5.5,22.7,0.4c9.3,17.2-22.5,31-22.7,31.1C36.5,68.3,4.7,54.5,14,37.3z">
+                        </path>
+                        <path
+                            d="M60.5,32.2c-3.3-1.5-4.3-6.3-2.4-10.8c2-4.5,6.3-6.9,9.5-5.5s4.3,6.3,2.4,10.8c-1.6,3.6-4.7,5.9-7.5,5.9  C61.8,32.6,61.2,32.5,60.5,32.2L60.5,32.2z">
+                        </path>
+                        <path
+                            d="M3.5,26.7c-2-4.5-0.9-9.3,2.4-10.8s7.6,1,9.5,5.5s0.9,9.3-2.4,10.8c-0.6,0.3-1.3,0.4-2,0.4C8.1,32.6,5.1,30.3,3.5,26.7z">
+                        </path>
+                        <path
+                            d="M44.1,23.3c-4.2-1.1-6.3-6.7-4.8-12.4s6.2-9.4,10.4-8.3S56,9.3,54.5,15c-1.4,5-5.1,8.5-8.8,8.5  C45.1,23.5,44.6,23.4,44.1,23.3L44.1,23.3z">
+                        </path>
+                        <path
+                            d="M19,15c-1.5-5.7,0.6-11.3,4.8-12.4s8.8,2.6,10.4,8.3s-0.6,11.3-4.8,12.4c-0.5,0.1-1,0.2-1.5,0.2C24.2,23.5,20.4,20,19,15  L19,15z">
+                        </path>
+                    </g>
+                </svg>
+                <h1>Đối Tác</h1>
+                <div class="partner_wrapper">
+                    <div class="partner_list">
+                        <img src="./assets/images/Home1/logo_partner1.png" alt="logo_partner1" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner2.png" alt="logo_partner2" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner3.png" alt="logo_partner3" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner4.png" alt="logo_partner4" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner5.png" alt="logo_partner5" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner6.png" alt="logo_partner6" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner7.png" alt="logo_partner7" class="logo_partner">
+                        <img src="./assets/images/Home1/logo_partner8.png" alt="logo_partner8" class="logo_partner">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
