--- a/blog-health.html
+++ b/blog-health.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/blog.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
     <script src="./js/link_header_footer.js"></script>
 </head>
 
