--- a/blog-details-2.html
+++ b/blog-details-2.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="./css/blog-details.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Quicksand">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-
+    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
     <script src="./js/link_header_footer.js"></script>
 </head>
 
