--- a/header.html
+++ b/header.html
@@ -23,29 +23,29 @@
         <img class="logo" src="./assets/images/logo/black_logo.png" alt="logo" width="100" height="100">
         <div class="group">
             <ul class="navigation">
-                <li><a href="./Home.html" class="menu-item">Trang chủ</a></li>
-                <li><a href="./shop-category.html" class="menu-item">Cửa hàng</a></li>
-                <li><a href="./pet-category.html" class="menu-item">Thú cưng</a></li>
-                <li><a href="#" class="menu-item parent-item">Dịch vụ</a><i
+                <li><a href="./Home.html" class="menu-item" id="nav_home">Trang Chủ</a></li>
+                <li><a href="./shop-category.html" class="menu-item" id="nav_store">Cửa Hàng</a></li>
+                <li><a href="./pet-category.html" class="menu-item" id="nav_pet">Thú Cưng</a></li>
+                <li><a href="#" class="menu-item parent-item" id="nav_service">Dịch Vụ</a><i
                         class="fa-solid fa-chevron-down htmlcss-arrow arrow" id="service-icon"></i>
                     <ul class="dropdown">
                         <a href="./Vet.html" class="service-child-link">
-                            <li>Thú y</li>
+                            <li>Thú Y</li>
                         </a>
 
                         <a href="./Hotel.html" class="service-child-link">
-                            <li class="child-item">Khách sạn</li>
+                            <li class="child-item">Khách Sạn</li>
                         </a>
                         <a href="./Exercise.html" class="service-child-link">
-                            <li class="child-item">Tập thể dục</li>
+                            <li class="child-item">Tập Thể Dục</li>
                         </a>
                         <a href="./Grooming.html" class="service-child-link">
-                            <li class="child-item">Tắm gội-cắt tỉa lông</li>
+                            <li class="child-item">Tắm Gội-Cắt Tỉa Lông</li>
                         </a>
                     </ul>
                 </li>
-                <li><a href="./blog.html" class="menu-item">Bài viết</a></li>
-                <li><a href="./contact.html" class="menu-item">Liên hệ</a></li>
+                <li><a href="./blog.html" class="menu-item" id="nav_blog">Bài Viết</a></li>
+                <li><a href="./contact.html" class="menu-item" id="nav_contact">Liên Hệ</a></li>
             </ul>
             <div class="search">
                 <span class="icon-header">
